--- a/pytest.ini
+++ b/pytest.ini
@@ -1,2 +1,3 @@
 [pytest]
-addopts = --doctest-modules
+addopts = --doctest-modules --showlocals --ignore=./setup.py -v
+norecursedirs = .svn _build tmp*  build dist sample*
