--- a/.travis.yml
+++ b/.travis.yml
@@ -1,5 +1,7 @@
 language: python
 python:
     - "2.7"
-install: "pip install -r requirements.txt"
+install:
+    - sudo apt-get --reinstall install -qq language-pack-en language-pack-fr
+    - "pip install -r requirements.txt"
 script: ./run_tests.sh
